--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.1.4",
     "firebase": "^7.14.3",
     "rxjs": "~6.5.4",
+    "spectre.css": "^0.5.8",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
